@@ -287,6 +287,16 @@ L<Class::Utils>,
 L<Error::Pure>,
 L<Tags::HTML>.
 
+=head1 SEE ALSO
+
+=over
+
+=item L<Tags::HTML::Login::Access>
+
+Tags helper for login access.
+
+=back
+
 =head1 REPOSITORY
 
 L<https://github.com/michal-josef-spacek/Tags-HTML-Login-Button>
