@@ -162,6 +162,10 @@ EXAMPLE2
 DEPENDENCIES
     Class::Utils, Error::Pure, Tags::HTML.
 
+SEE ALSO
+    Tags::HTML::Login::Access
+        Tags helper for login access.
+
 REPOSITORY
     <https://github.com/michal-josef-spacek/Tags-HTML-Login-Button>
 
