@@ -1,6 +1,5 @@
 TODO
 ====
-2. Az bude Tags::HTML::Login::Access, tak pridat do see also sekce.
 5. Another example to doc with explicit CSS.
 6.
 
@@ -14,3 +13,6 @@ OK [20220912] skim
 
 4. Image to doc.
 OK [20230423] skim
+
+2. Az bude Tags::HTML::Login::Access, tak pridat do see also sekce.
+OK [20230610] skim
